redactable/tests/ui/not_sensitive_display_not_sensitive_rejected.stderr
error: `#[not_sensitive]` attributes are not needed on `NotSensitiveDisplay` types (the entire type is already non-sensitive)
 --> tests/ui/not_sensitive_display_not_sensitive_rejected.rs:7:8
  |
7 |     Io(#[not_sensitive] std::io::Error),
  |        ^
